kartların açıklamaları yapıldı

--- a/aksiyon.html
+++ b/aksiyon.html
@@ -125,7 +125,7 @@
                       <img src="resim/doom ethernal.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">Doom Ethernal</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text">Doom 3'ten (2004) bu yana serideki ilk büyük yapıttır. Oyuncular, Mars'taki enerji madenciliği tesislerinde Union Aerospace Corporation tarafından serbest bırakılan Cehennemden gelen şeytani güçlerle savaşırken, Doom Slayer olarak bilinen isimsiz bir uzay denizcisinin rolünü üstlenirler.</p>
                         <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                       </div>
                     </div>
@@ -135,7 +135,7 @@
                       <img src="resim/calisto.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">Calisto Protocol</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        <p class="card-text">2320'de Jacob Lee (Josh Duhamel)[4] ve partneri Max Barrow (Jeff Schine) United Jupiter Company (UJC) için sözleşmeli olarak çalışan yük sevkiyatcılarıdır ve UJC Charon gemisinin pilotlarıdır. </p>
                         <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                       </div>
                     </div>
@@ -145,7 +145,7 @@
                       <img src="resim/call of duty.jpg" class="card-img-top" alt="...">
                       <div class="card-body">
                         <h5 class="card-title">Call Of Duty Modern Warfare</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        <p class="card-text">Oyunun hikâyesi kurgusal bir yakın gelecekte geçmektedir. Orta Doğu'da bulunan ve ismi belirtilmeyen bir ülkede, radikal bir liderin ülke başkanını öldürerek askerî darbe içerisinde olması ile birlikte; Rusya'daki aşırı milliyetçi yapılanmalarla ortaya çıkan iç savaş olmak üzere iki ayrı konu ele alınmaktadır </p>
                         <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                       </div>
                     </div>
@@ -161,7 +161,7 @@
                 <img src="resim/god of war.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">God Of War</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Spartalı savaşçı ve Eski Yunan savaş Tanrısı Kratos'un Yunan Tanrılarından intikamını almasını konu alan bir oyundur.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -171,7 +171,7 @@
                 <img src="resim/crysis.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Crysis</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">Crysis 'te geçen olaylar Filipin denizindeki Lingshan Adaları üzerinde yakın gelecek kurgusu içerisinde geliştirilmiştir.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -181,7 +181,7 @@
                 <img src="resim/uncharted.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Uncharted 4</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">Hazine avcılığından emekli olan Drake, bir anda hırsızların dünyasına geri dönmek zorunda kalır. </p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -197,7 +197,7 @@
                 <img src="resim/ghost of.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Ghost Of Thushima</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Ghost of Tsushima'nın hikayesi; 13'üncü yüzyıl sonlarına dayanıyor. Ana oyunda, Japonya'nın Tsushima Adası'ndayız ve Moğol işgali kapımıza dayanmış durumda. Moğol lider Hotun Han, tüm kuvvetleriyle saldırırken, anakaradan uzakta bir başına olan Tsushima'nın Şogun'a haber iletecek zamanı ise yok.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -207,7 +207,7 @@
                 <img src="resim/rdr2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Red Dead Redemption 2</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">Red Dead Redemption 2 bir açık dünya oyunudur. Oyunda geçen zaman çetelerin ve silahlı soyguncuların yaşadığı Vahşi Batı döneminin son zamanlarıdır. Ana karakter Arthur Morgan üçüncü ve birinci şahıs bakış açısıyla kontrol edilebilmektedir. Oyun tek oyunculu ve çok oyunculu modları içermektedir.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -217,7 +217,7 @@
                 <img src="resim/resident evil.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">resident Evil Village</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">oyununun trajik olayları sonrasında, Ethan Winters ve eşi Mia hayatlarında yeni bir sayfa açmış, geçmişi arkalarında bırakmış ve huzur içinde yaşamlarına devam etmektedirler.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
