--- a/hakkımızda.html
+++ b/hakkımızda.html
@@ -141,6 +141,10 @@
     </div>
     <div class="container" style="display: flex; margin-top:-70px;">
         <div class="content" style="justify-content: center; margin-top: 130px;">
+         <div class="container" style="display: flex; justify-content: center;">
+            <p style="align-items:self-start;"><b>Gösterim Videosu</b></p>                    
+            <video src="resim/"></video>
+        </div>
             <b>Misyon Açıklaması:</b>
             <p>
                 "Örnek site" oyun tutkunlarına, oyun dünyasının derinliklerine dalarken bir araya gelmeleri ve
