--- a/index.html
+++ b/index.html
@@ -195,8 +195,7 @@
         <img src="resim/doom ethernal.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Doom Ethernal</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
+          <p class="card-text">Doom 3'ten (2004) bu yana serideki ilk büyük yapıttır.</p>
           <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
         </div>
       </div>
