--- a/korku.html
+++ b/korku.html
@@ -123,7 +123,7 @@
                 <img src="resim/until dawn.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Until dawn</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Until Dawn, tıpkı Alan Wake gibi dizi şeklinde ilerliyor ve her bölümün sonunda psikoloğun odasında uyanıyoruz. Burada psikolog bize, yani konsol başında oturan oyuncuya sesleniyor. İstediğiniz kadar kıvranın en nihayetinde hayatımız ikili seçimler arasında boğulmaktan ibarettir.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -133,7 +133,7 @@
                 <img src="resim/outlast.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Outlast</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">Oyunda, Miles Upshur adındaki bir serbest çalışan gazetecinin Lake County, Colorado dağlarının derinliklerinde bulunan Mount Massive Asylum isimli garip olaylar olduğu konuşulan bir akıl hastanesini haber yapmak için bir el kamerası ile tek başına girdikten sonra yaşadığı olaylar oynanmaktadır.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -143,7 +143,7 @@
                 <img src="resim/resident evil.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Resident Evil Village</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">oyununun trajik olayları sonrasında, Ethan Winters ve eşi Mia hayatlarında yeni bir sayfa açmış, geçmişi arkalarında bırakmış ve huzur içinde yaşamlarına devam etmektedirler.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -159,7 +159,7 @@
                 <img src="resim/dead space.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Dead Space</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">13 Ekim 2008 tarihinde PlayStation 3 ve Xbox 360 oyun platformları, daha sonra 20 Ekim 2008 tarihinde de PC platformu için yayınlanmıştır. Oyunun yapımcılığını Electronic Arts: Redwood Shores firması üstlenmiştir. </p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -169,7 +169,7 @@
                 <img src="resim/alien.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Alien:İsolation</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">Annesinden uzun zamandır haber alamayan Amanda, karşısına çıkan ilk ipucunu takip ediyor ve devasa boyuttaki uzay gemisi Sevastopol'a giriş yapıyor. Ama ne giriş! Daha ilk dakikada tüm işler berbat oluyor ve yaşamla ölüm arasındaki gerilim dolu bir maceranın içinde buluyoruz kendimizi.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -179,7 +179,7 @@
                 <img src="resim/outlast2 (1).jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Outlast 2</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">oyununun trajik olayları sonrasında, Ethan Winters ve eşi Mia hayatlarında yeni bir sayfa açmış, geçmişi arkalarında bırakmış ve huzur içinde yaşamlarına devam etmektedirler. Chris Redfield, önceki Resident Evil oyunlarının kahramanı, bir anda ortaya çıkar ve huzurlu yaşamlarını bozarak harap olmuş Ethan Winters'ın kendisini Avrupa'da gizemli bir köyde bulmasına yol açar ve Ethan'ı yeni bir kabusun içine sürükler.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -195,7 +195,7 @@
                 <img src="resim/alan wake (1).jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Alan Wake</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">oyununun trajik olayları sonrasında, Ethan Winters ve eşi Mia hayatlarında yeni bir sayfa açmış, geçmişi arkalarında bırakmış ve huzur içinde yaşamlarına devam etmektedirler. </p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -205,7 +205,7 @@
                 <img src="resim/dying light.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Dying Light</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">Gizli GRE ajanı Kyle Crane, şantaj için kullanan Kadir Süleyman tarafından çalınan hassas bir dosyayı almak için Harran'a havadan bırakılır. Crane, enfekte bir kişi tarafından ısırılır, ancak Jade Aldemir tarafından kurtarılır ve Kule adı verilen hayatta kalan bir sığınağa götürülür.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -215,7 +215,7 @@
                 <img src="resim/days gone.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Days Gone</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">Küresel bir salgının başlamasından iki yıl sonra kıyamet sonrası Oregon'da geçen oyunda eski kanun kaçağı Deacon St. John, karısı Sarah'nın hala hayatta olma olasılığını keşfeder ve bu da Deacon'ı onu bulmak için bir arayışa sokar.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
