--- a/ps.html
+++ b/ps.html
@@ -132,7 +132,7 @@
                 <img src="resim/need for speed.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Need For Speed:Heat</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">Amerika'nın Florida eyaletinde ilham alınarak oluşturulan kurgusal şehir Palm City'de hayat buluyor NFS Heat. Ve yasal olarak kabul görmeyen sokak yarışları ve yarışçıları var hikayemizin merkezinde.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -142,7 +142,7 @@
                 <img src="resim/calisto.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Calisto Protocol</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">2320'de Jacob Lee (Josh Duhamel)[4] ve partneri Max Barrow (Jeff Schine) United Jupiter Company (UJC) için sözleşmeli olarak çalışan yük sevkiyatcılarıdır ve UJC Charon gemisinin pilotlarıdır.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -158,7 +158,7 @@
                 <img src="resim/until dawn.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Until Dawn</h5>
-                  <p class="card-text"> Spartalı savaşçı ve Eski Yunan savaş Tanrısı Kratos'un Yunan Tanrılarından intikamını almasını konu alan bir oyundur.</p>
+                  <p class="card-text">Until Dawn, tıpkı Alan Wake gibi dizi şeklinde ilerliyor ve her bölümün sonunda psikoloğun odasında uyanıyoruz. Burada psikolog bize, yani konsol başında oturan oyuncuya sesleniyor. İstediğiniz kadar kıvranın en nihayetinde hayatımız ikili seçimler arasında boğulmaktan ibarettir.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -168,7 +168,7 @@
                 <img src="resim/ghost of.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Ghost Of Tsushima</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">Ghost of Tsushima'nın hikayesi; 13'üncü yüzyıl sonlarına dayanıyor. Ana oyunda, Japonya'nın Tsushima Adası'ndayız ve Moğol işgali kapımıza dayanmış durumda. Moğol lider Hotun Han, tüm kuvvetleriyle saldırırken, anakaradan uzakta bir başına olan Tsushima'nın Şogun'a haber iletecek zamanı ise yok.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -178,7 +178,7 @@
                 <img src="resim/second son.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">İnfeamus Second Son</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">Çizgi roman okumayı sever misiniz? Ben bayılırım. Çocukluğumun Şövalyenin Düşüşü ve Superman'in Ölümü'yle geçtiğini düşünecek olursak, kökleri çok derine inen bir tutku bu bendeki.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -194,7 +194,7 @@
                 <img src="resim/for honor(1).jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">For Honor</h5>
-                  <p class="card-text"> Spartalı savaşçı ve Eski Yunan savaş Tanrısı Kratos'un Yunan Tanrılarından intikamını almasını konu alan bir oyundur.</p>
+                  <p class="card-text">Yıllarca süren savaşlar neticesinde Samuraylar, Vikingler ve şövalyeler kimin galip olduğunu kendilerine bile itiraf edemezler. Şövalyeler sonsuz barış sağlanması için adım atarken, bu üç grubun mücadelesi tarihte her zaman hatırlanacak ve nesillerce akılda kalacak hatıralar bırakacaktır.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -204,7 +204,7 @@
                 <img src="resim/elden ring.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Elden Ring</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">Elden Ring içinde “Dış Tanrı” denilen, yalnızca bahsedildiğini duyduğumuz ve kendisini görmediğimiz Yüce İrade adında bir varlık var. Ayrıca Empyrean olarak adlandırılan bir tür tanrısal insan grubu var ki, bunlar tanrıdan çok insan olmalarına rağmen her an yeryüzünün tanrısı haline gelip dış tanrı olan bu Yüce İrade’nin yeryüzündeki temsilcisi olabilecek varlıklar.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -214,7 +214,7 @@
                 <img src="resim/alien.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Alien:İsolation</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">Annesinden uzun zamandır haber alamayan Amanda, karşısına çıkan ilk ipucunu takip ediyor ve devasa boyuttaki uzay gemisi Sevastopol'a giriş yapıyor. Ama ne giriş! Daha ilk dakikada tüm işler berbat oluyor ve yaşamla ölüm arasındaki gerilim dolu bir maceranın içinde buluyoruz kendimizi.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
