--- a/xbox.html
+++ b/xbox.html
@@ -123,7 +123,7 @@
                 <img src="resim/alien.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Alien:İsolation</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Annesinden uzun zamandır haber alamayan Amanda, karşısına çıkan ilk ipucunu takip ediyor ve devasa boyuttaki uzay gemisi Sevastopol'a giriş yapıyor. Ama ne giriş! Daha ilk dakikada tüm işler berbat oluyor ve yaşamla ölüm arasındaki gerilim dolu bir maceranın içinde buluyoruz kendimizi.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -133,7 +133,7 @@
                 <img src="resim/valhala (1).jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Assasin Creed Valhala</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">oyununun trajik olayları sonrasında, Ethan Winters ve eşi Mia hayatlarında yeni bir sayfa açmış, geçmişi arkalarında bırakmış ve huzur içinde yaşamlarına devam etmektedirler.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -143,7 +143,7 @@
                 <img src="resim/alan wake (1).jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Alan Wake</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">oyununun trajik olayları sonrasında, Ethan Winters ve eşi Mia hayatlarında yeni bir sayfa açmış, geçmişi arkalarında bırakmış ve huzur içinde yaşamlarına devam etmektedirler.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -160,7 +160,7 @@
                 <img src="resim/call of duty.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Call Of Duty Modern warfare</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Oyunun hikâyesi kurgusal bir yakın gelecekte geçmektedir. Orta Doğu'da bulunan ve ismi belirtilmeyen bir ülkede, radikal bir liderin ülke başkanını öldürerek askerî darbe içerisinde olması ile birlikte; Rusya'daki aşırı milliyetçi yapılanmalarla ortaya çıkan iç savaş olmak üzere iki ayrı konu ele alınmaktadır.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -170,7 +170,7 @@
                 <img src="resim/days gone.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Days Gone</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">Küresel bir salgının başlamasından iki yıl sonra kıyamet sonrası Oregon'da geçen oyunda eski kanun kaçağı Deacon St. John, karısı Sarah'nın hala hayatta olma olasılığını keşfeder ve bu da Deacon'ı onu bulmak için bir arayışa sokar.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -197,7 +197,7 @@
                 <img src="resim/detroit.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Detroit Became Human</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Oyun Kara, Connor ve Markus adlı üç androidin hikâyesine odaklanmaktadır. Hizmet androidi olan Kara evrilip bilinç sahibi olarak efendisinin kızıyla birlikte kaçmış, bakıcı android Markus kendisini androidlerin özgürlük mücadelesine adamış, Connor ise bilinç sahibi androidleri avlamak üzere görevlendirilmiştir.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -207,7 +207,7 @@
                 <img src="resim/persona-5-persona-series-phantom-thieves-wallpaper-preview.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Persona 5</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">Persona 5, günümüz Tokyo'sunda geçmektedir. Joker takma adıyla bilinen bir lise öğrencisini, haksız yere saldırıyla suçlanıp denetimli serbestliğe tabi tutulduktan sonra yeni bir okula transfer olur. Bir okul yılı boyunca, o ve diğer öğrenciler özel bir gücün farkına varırlar ve Phantom Thieves of Hearts olarak bilinen bir grup gizli infazcı olurlar.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -217,7 +217,7 @@
                 <img src="resim/elden ring.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Elden Ring</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">Elden Ring içinde “Dış Tanrı” denilen, yalnızca bahsedildiğini duyduğumuz ve kendisini görmediğimiz Yüce İrade adında bir varlık var. Ayrıca Empyrean olarak adlandırılan bir tür tanrısal insan grubu var ki, bunlar tanrıdan çok insan olmalarına rağmen her an yeryüzünün tanrısı haline gelip dış tanrı olan bu Yüce İrade’nin yeryüzündeki temsilcisi olabilecek varlıklar.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -237,8 +237,7 @@
               <li class="page-item"><a class="page-link" href="bilgisayar.html">1</a></li>
               <li class="page-item"><a class="page-link" href="ps.html">2</a></li>
               <li class="page-item"><a class="page-link" href="xbox.html">3</a></li>
-              <li class="page-item">
-                <a class="page-link" href="bilgisayar.html">sonraki</a>
+              <a class="page-link" href="bilgisayar.html">sonraki</a>
               </li>
             </ul>
           </nav>
