--- a/yarıs.html
+++ b/yarıs.html
@@ -132,7 +132,7 @@
                 <img src="resim/need for speed.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Need For Speed:Heat</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">Amerika'nın Florida eyaletinde ilham alınarak oluşturulan kurgusal şehir Palm City'de hayat buluyor NFS Heat. Ve yasal olarak kabul görmeyen sokak yarışları ve yarışçıları var hikayemizin merkezinde.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
