--- a/bilgisayar.html
+++ b/bilgisayar.html
@@ -7,8 +7,7 @@
   <title>Bilgisayar</title>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
   <div class="sayfa">
@@ -125,7 +124,7 @@
             <img src="resim/doom ethernal.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Doom Ethernal</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">Doom 3'ten (2004) bu yana serideki ilk büyük yapıttır. Oyuncular, Mars'taki enerji madenciliği tesislerinde Union Aerospace Corporation tarafından serbest bırakılan Cehennemden gelen şeytani güçlerle savaşırken, Doom Slayer olarak bilinen isimsiz bir uzay denizcisinin rolünü üstlenirler.</p>
               <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
             </div>
           </div>
@@ -135,7 +134,7 @@
             <img src="resim/calisto.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Calisto Protocol</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <p class="card-text">2320'de Jacob Lee (Josh Duhamel)[4] ve partneri Max Barrow (Jeff Schine) United Jupiter Company (UJC) için sözleşmeli olarak çalışan yük sevkiyatcılarıdır ve UJC Charon gemisinin pilotlarıdır. </p>
               <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
             </div>
           </div>
@@ -145,7 +144,7 @@
             <img src="resim/need for speed.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Need For Speed:Heat</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <p class="card-text">Amerika'nın Florida eyaletinde ilham alınarak oluşturulan kurgusal şehir Palm City'de hayat buluyor NFS Heat. Ve yasal olarak kabul görmeyen sokak yarışları ve yarışçıları var hikayemizin merkezinde.</p>
               <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
             </div>
           </div>
@@ -162,7 +161,7 @@
           <img src="resim/god of war.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">God Of War</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Spartalı savaşçı ve Eski Yunan savaş Tanrısı Kratos'un Yunan Tanrılarından intikamını almasını konu alan bir oyundur.</p>
             <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
           </div>
         </div>
@@ -172,7 +171,7 @@
           <img src="resim/outlast.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Outlast</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">Oyunda, Miles Upshur adındaki bir serbest çalışan gazetecinin Lake County, Colorado dağlarının derinliklerinde bulunan Mount Massive Asylum isimli garip olaylar olduğu konuşulan bir akıl hastanesini haber yapmak için bir el kamerası ile tek başına girdikten sonra yaşadığı olaylar oynanmaktadır.</p>
             <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
           </div>
         </div>
@@ -182,7 +181,7 @@
           <img src="resim/call of duty.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Detroit Became Human</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text">Oyun Kara, Connor ve Markus adlı üç androidin hikâyesine odaklanmaktadır. Hizmet androidi olan Kara evrilip bilinç sahibi olarak efendisinin kızıyla birlikte kaçmış, bakıcı android Markus kendisini androidlerin özgürlük mücadelesine adamış, Connor ise bilinç sahibi androidleri avlamak üzere görevlendirilmiştir.</p>
             <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
           </div>
         </div>
@@ -198,7 +197,7 @@
           <img src="resim/elden ring.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Elden Ring</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text">Elden Ring içinde “Dış Tanrı” denilen, yalnızca bahsedildiğini duyduğumuz ve kendisini görmediğimiz Yüce İrade adında bir varlık var. Ayrıca Empyrean olarak adlandırılan bir tür tanrısal insan grubu var ki, bunlar tanrıdan çok insan olmalarına rağmen her an yeryüzünün tanrısı haline gelip dış tanrı olan bu Yüce İrade’nin yeryüzündeki temsilcisi olabilecek varlıklar. </p>
             <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
           </div>
         </div>
@@ -208,7 +207,7 @@
           <img src="resim/dying light.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Dying Light</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">Gizli GRE ajanı Kyle Crane, şantaj için kullanan Kadir Süleyman tarafından çalınan hassas bir dosyayı almak için Harran'a havadan bırakılır. Crane, enfekte bir kişi tarafından ısırılır, ancak Jade Aldemir tarafından kurtarılır ve Kule adı verilen hayatta kalan bir sığınağa götürülür.</p>
             <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
           </div>
         </div>
@@ -218,7 +217,7 @@
           <img src="resim/little.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Little Nightmares</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text">Normalde oyunlarda hikayeye ve hikaye anlatımına çok önem veririm. Oyun firmalarının kolaya kaçarak her şeyi sembozilm yolu ile anlatması başta bir oyuncu olarak ve daha sonra da bir eleştirmen olarak cidden canımı sıkar. Bir yapımcı sembolizm kullandığında bunu gerçekten kullanmak istedikleri için, atmosfere bir yararı olduğu için kullandıklarını anlarım. Diğerleri ise, yalnızca tembellikten bunu yapar.</p>
             <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
           </div>
         </div>
