--- a/macera.html
+++ b/macera.html
@@ -122,7 +122,7 @@
                 <img src="resim/horizon.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Horizon Zero Dawn</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Oyunun açılış sahnesinde, kabileden sürülmüş bir adam (Rost) tarafından bulunan bir bebeğin kabile analarına götürüldüğünü ve burada çocuğa ad verildiğini görüyoruz. Bu sevimli kızımızın adı Aloy. </p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -132,7 +132,7 @@
                 <img src="resim/witcher.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Witcher Wild Hunter 3</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">Roman serisinin ana hikâyesi, Rivyalı Geralt ve Ciri üzerine odaklanır. Geralt ile aralarında kader bağı bulunan Ciri, ülkesinin istila edilmesi ve politikanın ortasında kaldığı için, Geralt tarafından Witcher olarak yetiştirilmek üzere Witcherların kalesi Kaer Morhen'e getirilir.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -142,7 +142,7 @@
                 <img src="resim/detroit.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Detroit Became Human</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">Oyun Kara, Connor ve Markus adlı üç androidin hikâyesine odaklanmaktadır. Hizmet androidi olan Kara evrilip bilinç sahibi olarak efendisinin kızıyla birlikte kaçmış, bakıcı android Markus kendisini androidlerin özgürlük mücadelesine adamış, Connor ise bilinç sahibi androidleri avlamak üzere görevlendirilmiştir.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -158,7 +158,7 @@
                 <img src="resim/rdr2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Red Dead Redemption 2</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Red Dead Redemption 2 bir açık dünya oyunudur. Oyunda geçen zaman çetelerin ve silahlı soyguncuların yaşadığı Vahşi Batı döneminin son zamanlarıdır. Ana karakter Arthur Morgan üçüncü ve birinci şahıs bakış açısıyla kontrol edilebilmektedir. Oyun tek oyunculu ve çok oyunculu modları içermektedir.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -168,7 +168,7 @@
                 <img src="resim/second son.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">İnfeamus Second Son</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">Çizgi roman okumayı sever misiniz? Ben bayılırım. Çocukluğumun Şövalyenin Düşüşü ve Superman'in Ölümü'yle geçtiğini düşünecek olursak, kökleri çok derine inen bir tutku bu bendeki. </p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -178,7 +178,7 @@
                 <img src="resim/spiderman.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Spiderman</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">Marvel’s Spider-Man ile oyunculara yepyeni bir Örümcek Adam hikayesi sunuluyor. Henüz 23 yaşında olan Peter Parker, eğitim sürecini staj yaparak sürdürmektedir. </p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -194,7 +194,7 @@
                 <img src="resim/elden ring.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Elden Ring</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Elden Ring içinde “Dış Tanrı” denilen, yalnızca bahsedildiğini duyduğumuz ve kendisini görmediğimiz Yüce İrade adında bir varlık var. Ayrıca Empyrean olarak adlandırılan bir tür tanrısal insan grubu var ki, bunlar tanrıdan çok insan olmalarına rağmen her an yeryüzünün tanrısı haline gelip dış tanrı olan bu Yüce İrade’nin yeryüzündeki temsilcisi olabilecek varlıklar. </p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -204,7 +204,7 @@
                 <img src="resim/ratchet.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Ratchet And Clank</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">Ratchet, Kaptan Qwark'ın yeni Galaktik Korucusu olacağının hayallerini kurarken de, uzak bir gezegende Savaş Robot'ları yaratılıyordur. Hatalı bir Savaş Robotu'nun üretildiğini fark edilince imha alarmı aktif olur ve böylelikle hatalı robot oradan kaçmaya çalışır.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -214,7 +214,7 @@
                 <img src="resim/watch dogs.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Watch Dogs</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">Aiden Pearce ve ailesi geçmişte birileri tarafından saldırıya uğruyor ve yeğeni Lena ölüyor. Aiden Pearce ise elindeki Profiler adlı cihaz ile şehri bir silah gibi kullanarak saldırganlardan intikam almaya çalışıyor.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
@@ -230,10 +230,10 @@
               <li class="page-item">
                 <a class="page-link" href="korku.html">öncesi</a>
               </li>
-              <li class="page-item"><a class="page-link" target="_blank" href="aksiyon.html">1</a></li>
-              <li class="page-item"><a class="page-link" target="_blank" href="korku.html">2</a></li>
-              <li class="page-item"><a class="page-link" target="_blank" href="macera.html">3</a></li>
-              <li class="page-item"><a class="page-link" target="_blank" href="yarıs.html">4</a></li>
+              <li class="page-item"><a class="page-link"  href="aksiyon.html">1</a></li>
+              <li class="page-item"><a class="page-link"  href="korku.html">2</a></li>
+              <li class="page-item"><a class="page-link"  href="macera.html">3</a></li>
+              <li class="page-item"><a class="page-link"  href="yarıs.html">4</a></li>
               <li class="page-item">
                 <a class="page-link" href="yarıs.html">sonraki</a>
               </li>
